WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219974
[JSC] Not using JITCage trampoline for non JITCage JSC
https://bugs.webkit.org/show_bug.cgi?id=219974
Summary
[JSC] Not using JITCage trampoline for non JITCage JSC
Yusuke Suzuki
Reported
2020-12-16 20:10:32 PST
[JSC] Not using JITCage trampoline for non JITCage JSC
Attachments
Patch
(7.26 KB, patch)
2020-12-16 20:11 PST
,
Yusuke Suzuki
tzagallo
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(7.95 KB, patch)
2020-12-16 20:25 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-12-16 20:11:11 PST
Created
attachment 416384
[details]
Patch
Tadeu Zagallo
Comment 2
2020-12-16 20:15:07 PST
Comment on
attachment 416384
[details]
Patch r=me
Tadeu Zagallo
Comment 3
2020-12-16 20:15:59 PST
<
rdar://problem/72258168
>
Yusuke Suzuki
Comment 4
2020-12-16 20:25:42 PST
Created
attachment 416386
[details]
Patch Make ARM64 (not ARM64E) built well
Yusuke Suzuki
Comment 5
2020-12-16 23:21:06 PST
Committed
r270928
: <
https://trac.webkit.org/changeset/270928
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug