[JSC] Not using JITCage trampoline for non JITCage JSC https://bugs.webkit.org/show_bug.cgi?id=219974

Reviewed by Tadeu Zagallo.

We avoid using JITCage trampoline in YarrJIT if JSC is not using JITCage.

* llint/LowLevelInterpreter.asm:
* yarr/YarrJIT.cpp:
* yarr/YarrJIT.h:
(JSC::Yarr::YarrCodeBlock::execute):

Canonical link: https://commits.webkit.org/232551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270928 268f45cc-cd09-0410-ab3c-d52691b4dbfc